Minfied CSS and JS! DO NOT MERGE
Not with the Master branch, anyways. I used Microsoft Ajax Minifier to
handle this task, but I may have to look into more automation and shell
scripts for the next time I do this.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 dev comments
 views/images/pizza_debug.png
 views/images/pizzeria_scaled.jpg.bak
+css/print.css.bak
+css/style.css.bak
+views/css/bootstrap-grid.css.bak
+views/css/style.css.bak
+views/js/main.js.bak
